--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "gulp": "^4.0.2",
+    "gulp-svgmin": "^3.0.0",
     "prettier": "^1.19.1",
+    "pump": "^3.0.0",
+    "replace-in-file": "^6.2.0",
+    "run-sequence": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-loader-v16": "npm:vue-loader@^16.1.2"
