--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
     "singleQuote": true,
     "bracketSpacing": true,
     "jsxBracketSameLine": true,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "printWidth": 300
 }
